--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 attrs==17.4.0
+certifi==2018.1.18
+chardet==3.0.4
 flake8==3.5.0
+idna==2.6
 mccabe==0.6.1
 more-itertools==4.1.0
 pluggy==0.6.0
@@ -7,4 +10,6 @@ py==1.5.3
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pytest==3.5.0
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
